--- a/example_configurations/hcc_config.json
+++ b/example_configurations/hcc_config.json
@@ -4,7 +4,7 @@
     "local_scheduler": false,
     "blackhole_path": "/work/choueiry/ihowell/binaries/BlackholeApp",
     "stardust_root": "/work/choueiry/ihowell/stampede/aaai-2020",
-    "log_path": "/work/choueiry/ihowell/blackhole/aaai-2020/log",
+    "log_dir": "/work/choueiry/ihowell/blackhole/aaai-2020/log",
     "tmp_path": "/work/choueiry/ihowell/tmp"
     "keep_tmp_files": false
 }
