--- a/example_configurations/zebra_config.json
+++ b/example_configurations/zebra_config.json
@@ -5,6 +5,6 @@
     "blackhole_app": "/home/ihowell/blackhole/build/BlackholeApp",
     "stardust_path": "/mnt/hdd/ihowell/stampede/aaai-2020/",
     "log_dir": "/mnt/hdd/ihowell/blackhole/aaai-2020/log",
-    "tmp_path": "/mnt/hdd/ihowell/tmp",
+    "tmp_path": "/mnt/hdd/ihowell/tmp/",
     "keep_tmp_files": false
 }
