--- a/example_configurations/local_config.json
+++ b/example_configurations/local_config.json
@@ -1,10 +1,6 @@
 {
     "platform": "local",
-    "max_running_jobs": 4,
+    "keep_tmp_files": false,
     "local_scheduler": true,
-    "blackhole_app": "/Users/ihowell/Projects/blackhole/build/BlackholeApp",
-    "stardust_path": "/Users/ihowell/Data/luigi_test_stardust/",
-    "log_dir": "/Users/ihowell/Data/luigi_test_blackhole/log",
-    "tmp_path": "/Users/ihowell/Data/luigi_test_blackhole/tmp/",
-    "keep_tmp_files": false
+    "max_running_jobs": 3
 }
