--- a/example_configurations/local_config.json
+++ b/example_configurations/local_config.json
@@ -1,6 +1,7 @@
 {
     "platform": "local",
     "keep_tmp_files": false,
+    "tmp_path": "./",
     "local_scheduler": true,
     "max_running_jobs": 3
 }
