--- a/example_configurations/local_config.toml
+++ b/example_configurations/local_config.toml
@@ -5,7 +5,7 @@ workers = 3
 [SlurmConfig]
 jobname = "luigi-job"
 runmode = "runmode_local"
-group_name = "choueiry"
+group_name = "{group_name}"
 partition = "batch"
 cores = 1
 time = "7200"
@@ -13,5 +13,5 @@ threads = 1
 
 
 [ShellConfig]
-tmp_path_prefix = "/Users/ihowell/Data/test/tmp/"
+tmp_path_prefix = "./"
 keep_tmp_files = false
