--- a/example_configurations/local_config.toml
+++ b/example_configurations/local_config.toml
@@ -1,3 +1,15 @@
+[StardustConfig]
+stardust_path = "/Users/ihowell/Data/luigi_test_stardust/"
+
+
+[BlackholeConfig]
+blackhole_app = "/Users/ihowell/Projects/blackhole/build/BlackholeApp"
+blackhole_path = "/Users/ihowell/Data/luigi_test_blackhole/"
+
+
+[BlackholeWebConfig]
+blackhole_web_path = "/Users/ihowell/Data/luigi_test_blackhole_web/"
+
 [core]
 workers = 3
 
