--- a/baselines_tasks/hcc_config.toml
+++ b/baselines_tasks/hcc_config.toml
@@ -1,18 +1,20 @@
 [core]
-workers = 10
+workers = 30
 
 
 [ShellConfig]
-preamble_path = "unl_luigi/tasks/crane_preamble.sh"
-tmp_path_prefix = "/work/{group_name}/{user_name}/tmp/"
-keep_tmp_files = false
+preamble_path = "baselines_tasks/hcc_preamble.sh"
+tmp_path_prefix = "/work/scott/equint/tmp"
+keep_tmp_files = true
 
 
 [SlurmConfig]
-jobname = "luigi-job"
+jobname = "baseline-luigi"
 runmode = "runmode_hpc"
-group_name = "{group_name}"
-partition = "batch"
+group_name = "scott"
+partition = "scott,gpu"
 cores = 1
-time = "7200"
+mem=16000
+time = "3-00:00:00"
 threads = 1
+gres="gpu:1"
