cleanup and bugfix

--- a/baselines_tasks/hcc_config.toml
+++ b/baselines_tasks/hcc_config.toml
@@ -12,7 +12,7 @@ keep_tmp_files = true
 jobname = "baseline-luigi"
 runmode = "runmode_hpc"
 group_name = "scott"
-partition = "scott,gpu"
+partition = "gpu"
 cores = 1
 mem=16000
 time = "3-00:00:00"
